--- a/views/tasks/form.templ
+++ b/views/tasks/form.templ
@@ -1,9 +1,12 @@
 package views
 
+import "github.com/xV0lk/htmx-go/views"
+
 import mw "github.com/xV0lk/htmx-go/internal/middleware"
 
 templ Form(){
 <form hx-post="/tasks" hx-swap="outerHTML transition:true">
+  @views.Csrf()
   <input
     id="title"
     name="title"
